--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Hello! I am a meat popsicle. I hope to one day ascend to become a daemon prince of Nurgle. </p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>South Jersey</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Video Games, Streaming, Warhammer 40k</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Remote Software Developer</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Durham, NC</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I have a passion for it. I believe it will provide more toolkits for my IT arsenal.</p>
     </section>
 
     <footer id="footer">
